fixing card size overflow

--- a/frontend/src/components/BookCard.css
+++ b/frontend/src/components/BookCard.css
@@ -3,6 +3,6 @@
 }
 
 .card-img {
-    width: 150px;
+    width: 200px;
     height: 300px;
 }
